<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GitSNES</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="add_game">Add Game</string>
    <string name="search_game">Advanced Search</string>
    <string name="actionbar_tutorial">hola</string>
    <string name="error_player">error</string>
    <string name="app_id">1558703534366669</string>
    <string name="title_facebook_login">Login facebook</string>
    <string name="game_list">Game List</string>
    <string name="adminview">Admin Menu</string>
    <string name="recomended">Recommended</string>
    <string name="favorites">Favorites</string>
    <string name="search_title">searching</string>


    <style name="CustomActionBarTheme"
        parent="@android:style/Theme.Holo">
        <item name="android:windowActionBarOverlay">true</item>
    </style>
</resources>
